# phosphobot

./: .gitignore  ADDING_LEROBOT_MODELS.md  CONTRIBUTING.md  Makefile  README.md  install.ps1  package-lock.json  pyproject.toml
.github/: PUBLISH_SETUP.md
.github/workflows/: deploy_modal.yml  mypy_tests.yml  publish.yml  publish_tauri.yml
cloud/frontend/: package-lock.json  package.json
cloud/frontend/app/: layout.tsx  page.tsx  providers.tsx
cloud/frontend/components/: auth-button.tsx  auth-provider.tsx  forgot-password-form.tsx  login-form.tsx  logout-button.tsx  sign-up-form.tsx  update-password-form.tsx
cloud/frontend/components/sections/: comparison-table.tsx  faq.tsx  subscribe-button.tsx
cloud/frontend/providers/: auth.tsx
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: main.tsx  types.ts
dashboard/src/components/callout/: phospho-vr.tsx
dashboard/src/components/common/: add-robot-connection.tsx  add-zmq-camera-modal.tsx  app-sidebar.tsx  code-snippet.tsx  huggingface-key.tsx  recorder.tsx  robot-status-button.tsx  temperature.tsx  wandb-key.tsx
dashboard/src/components/custom/: ModelsTable.tsx
dashboard/src/components/layout/: footer.tsx  topbar.tsx
dashboard/src/context/: AuthContext.tsx
dashboard/src/lib/: hooks.ts  utils.ts
dashboard/src/pages/: AIControlPage.tsx  AITrainingPage.tsx  AdminSettingsPage.tsx  BrowsePage.tsx  DashboardPage.tsx  ViewVideoPage.tsx
dashboard/src/providers/: auth.tsx
dataset-viewer/: README.md  next.config.ts  package-lock.json  package.json
dataset-viewer/src/app/: page.tsx
dataset-viewer/src/components/: videos-player.tsx
docker/: Dockerfile.viewer  README.md
examples/03-simple-voice-command/: requirements.txt
examples/04-advanced-voice-command/frontend-demo-AI/: package-lock.json  package.json
inference/ACT/: inference.py  server.py
modal/: Makefile  pyproject.toml  utils.py
modal/act/src/: app.py
modal/admin/: app.py  chat.py
modal/admin/src/: app.py  chat.py
modal/gr00t/: Dockerfile
modal/gr00t/src/: app.py  helper.py
modal/lerobot_modal/: __init__.py  act.py  app.py  conversion_service.py  conversion_service_from_v2.py  conversion_service_from_v21.py  helper.py  smolvla.py
modal/paligemma/: app.py
modal/pi0/: Dockerfile  app.py  policy_server.Dockerfile
modal/pi0/src/: app.py
modal/pi05/: Dockerfile  app.py
modal/smolvla/: Dockerfile
modal/smolvla/src/: app.py  helper.py
modal/tests/: test_conversion.py  test_paligemma.py
modal/vllm/: app.py
phosphobot/: .gitignore  README.md  models.py  pyproject.toml  utils.py
phosphobot/api/training/: client.py
phosphobot/phosphobot/: ai_control.py  app.py  camera.py  configs.py  leader_follower.py  main.py  posthog.py  recorder.py  robot.py  supabase.py  teleoperation.py  utils.py
phosphobot/phosphobot/am/: act.py  base.py  gr00t.py  lerobot.py  pi0.py  pi05.py  smolvla.py
phosphobot/phosphobot/chat/: agent.py  app.py
phosphobot/phosphobot/endpoints/: __init__.py  auth.py  camera.py  chat.py  control.py  networking.py  pages.py  recording.py  training.py  update.py
phosphobot/phosphobot/fly/: agent.py  app.py
phosphobot/phosphobot/hardware/: __init__.py  base.py  excavator.py  go2.py  koch11.py  lekiwi.py  new_manipulator_template.py  phosphobot.py  piper.py  ros2_robot.py  sim.py  so100.py  urdfloader.py
phosphobot/phosphobot/models/: __init__.py  dataset.py  lerobot_dataset.py  robot.py
phosphobot/resources/: tokens.toml
phosphobot/resources/urdf/piper/urdf/: piper.urdf
phosphobot/resources/urdf/ros2_generic/: robot.urdf
phosphobot/tests/: utils.py
phosphobot/tests/api/: test_api.py
phosphobot/tests/models/: test_smolvla_inference.py
phosphobot/tests/phosphobot/: test_base_manipulator.py
phosphobot/urdf/piper/piper_ros-noetic/: .gitignore  README(EN).md  README.MD
phosphobot/urdf/piper/piper_ros-noetic/src/piper/scripts/: piper_ctrl_single_node.py
phosphobot/urdf/piper/piper_ros-noetic/src/piper_description/urdf/: piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro
phosphobot/urdf/piper/piper_ros-noetic/src/piper_moveit/: README(EN).md  README.md
phosphobot/urdf/piper/piper_ros-noetic/src/piper_moveit/moveit-1.1.11/: .gitignore
phosphobot/urdf/piper/piper_ros-noetic/src/piper_moveit/moveit-1.1.11/moveit_ros/visualization/rviz_plugin_render_tools/src/: trajectory_visualization.cpp
phosphobot/urdf/piper/piper_ros-noetic/src/piper_moveit/moveit_ctrl/scripts/: joint_moveit_ctrl.py
phosphobot/urdf/piper/piper_ros-noetic/src/piper_sim/: README(EN).md  README.md
phosphobot/urdf/piper/piper_ros-noetic/src/piper_sim/piper_mujoco/launch/: piper_mujoco.launch  piper_no_gripper_mujoco.launch
phosphobot/urdf/piper/piper_ros-noetic/src/piper_sim/piper_mujoco/scripts/: piper_mujoco_ros.py  piper_no_gripper_mujoco_ros.py
phosphobot/urdf/piper/urdf/: piper_no_gripper_description.urdf
scripts/gr00t/: train.py
shared/auth/: AuthContext.tsx  README.md  package-lock.json  package.json  tsconfig.json
shared/auth/src/: index.ts  types.ts
simulation/pybullet/: README.md  pyproject.toml
src-tauri/: .env.example  .gitignore  Cargo.toml  README.md  UPDATER_README.md  check_build_needed.mjs  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json  http.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-if-needed.mjs  build-python.mjs  clean.mjs  generate-updater-keys.mjs  reset-python.mjs
src-tauri/src/: main.rs  state.rs
(+18 files in other folders)
